[gd_scene load_steps=24 format=3 uid="uid://hbytjywv1vm8"]

[ext_resource type="Texture2D" uid="uid://if0i4kwaoqx5" path="res://assets/undeadMobs/Basic Undead Animations/Carcass Feeder/CarcassFeeder.png" id="1_83dsq"]
[ext_resource type="Script" path="res://scenes/enemy.gd" id="1_w34ly"]
[ext_resource type="Texture2D" uid="uid://p2p5q8cym5gk" path="res://assets/undeadMobs/Basic Undead Animations/Bound Cadaver/BoundCadaver.png" id="2_vpriy"]
[ext_resource type="Texture2D" uid="uid://b12x3klc3itol" path="res://assets/undeadMobs/Basic Undead Animations/Ghastly Eye/GhastlyEye.png" id="3_whmg2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bclmw"]
atlas = ExtResource("2_vpriy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5tss"]
atlas = ExtResource("2_vpriy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iep2a"]
atlas = ExtResource("2_vpriy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_akofm"]
atlas = ExtResource("2_vpriy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s40wp"]
atlas = ExtResource("3_whmg2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0ps3"]
atlas = ExtResource("3_whmg2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxeps"]
atlas = ExtResource("3_whmg2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y3vi"]
atlas = ExtResource("3_whmg2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2l67"]
atlas = ExtResource("1_83dsq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i46d0"]
atlas = ExtResource("1_83dsq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7afaw"]
atlas = ExtResource("1_83dsq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mvh2"]
atlas = ExtResource("1_83dsq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6duh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bclmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5tss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iep2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akofm")
}],
"loop": true,
"name": &"BoundCadaver",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s40wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0ps3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxeps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y3vi")
}],
"loop": true,
"name": &"GhastlyEye",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2l67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i46d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7afaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mvh2")
}],
"loop": true,
"name": &"crawlers",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5g71g"]
size = Vector2(14, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gioi2"]
size = Vector2(8, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cptjw"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dg32i"]
size = Vector2(14, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxvav"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvk18"]
size = Vector2(8, 15)

[node name="Enemy" type="RigidBody2D" groups=["mobs"]]
gravity_scale = 1.66533e-16
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_w34ly")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["mobs"]]
sprite_frames = SubResource("SpriteFrames_6duh7")
animation = &"crawlers"
frame_progress = 0.886918

[node name="collisionCrawlers" type="CollisionShape2D" parent="." groups=["mobs"]]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_5g71g")
disabled = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["mobs"]]
position = Vector2(0, 0.5)
scale = Vector2(0.6, 0.65)

[node name="collisionCadaver" type="CollisionShape2D" parent="." groups=["mobs"]]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gioi2")
disabled = true

[node name="collisionGhastlyEye" type="CollisionShape2D" parent="." groups=["mobs"]]
shape = SubResource("RectangleShape2D_cptjw")
disabled = true

[node name="hitboxEnemy" type="Area2D" parent="."]

[node name="hitboxCrawler" type="CollisionShape2D" parent="hitboxEnemy"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_dg32i")
disabled = true

[node name="hitboxGhastlyEye" type="CollisionShape2D" parent="hitboxEnemy"]
shape = SubResource("RectangleShape2D_nxvav")
disabled = true

[node name="hitboxCadaver" type="CollisionShape2D" parent="hitboxEnemy"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_pvk18")
disabled = true

[connection signal="area_entered" from="hitboxEnemy" to="." method="_on_hitbox_enemy_area_entered"]
